# krowemafrai

./: .deployment  .dockerignore  .env.template  .gitignore  AZURE_DEPLOYMENT_FIX.md  DEPLOYMENT.md  DEPLOYMENT_AUTOMATION.md  DEPLOYMENT_FIXED.md  DEPLOYMENT_SUCCESS.md  FIXES_APPLIED.md  QUICK_START.md  SCRIPT_UPGRADE_SUMMARY.md  Untitled-1  app.py  azure.yaml  debug_frontend_config.py  deploy-backend-auto.sh  deploy-backend-manual.sh  deploy-frontend-fix.sh  deploy-manual.sh  deployment-config.env  index.html  main.py  quick-deploy-backend.sh  requirements-minimal.txt  requirements.txt  startup.sh  test_all_fixes.sh  web.config
.github/workflows/: aiagentsfrontend2-AutoDeployTrigger-0cf35e2e-15fd-47a4-a226-5ca10a29dd5d.yml  backend-aiagents-gov-AutoDeployTrigger-66d7852e-1596-4a66-824a-0498253f1e64.yml  deploy-backend-azure.yml  deploy-backend-webapp.yml  deploy-container-backend.yml  deploy-container-frontend.yml  deploy-fullstack-container-apps.yml  deploy-fullstack.yml  deploy-waf.yml  deploy-zeeland-backend-containerapp.yml  deploy.yml  main_aiagentsgov-backend.yml  main_aiagentsgov.yml  (+3 more)
infra/: main.bicep  main.parameters.json
src/: .dockerignore
src/frontend/: .env.sample  .gitignore  App.tsx  Dockerfile  frontend_server.py  package-lock.json  package.json  pyproject.toml  test.html  tsconfig.json  vite.config.ts
src/frontend/src/: App.tsx  App.tsx.save
src/frontend/src/api/: apiService.tsx  config.tsx
src/frontend/src/pages/: index.tsx  page.jsx
tests/: test_deployment_script.py
zeeland-autogen-backend/: Dockerfile  Dockerfile.azure  README.md
(+17 files in other folders)
